# docs/swagger.yml
@@ -58,6 +58,25 @@ paths:
         '5XX':
           $ref: "#/components/responses/UnexpectedError"
 
+  /study/type:
+    get:
+      parameters:
+        - in: query
+          name: idType
+          schema:
+            type: integer
+          description: The id of the study type
+      summary: Returns studies by studyId
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Filter'
+        '5XX':
+          $ref: "#/components/responses/UnexpectedError"
+
 produces:
   application/json
 consumes:
